--- a/Debug/makefile
+++ b/Debug/makefile
@@ -38,19 +38,19 @@ endif
 # Add inputs and outputs from these tool invocations to the build variables 
 
 # All Target
-all: SequencingProject2
+all: HiBAM
 
 # Tool invocations
-SequencingProject2: $(OBJS) $(USER_OBJS)
+HiBAM: $(OBJS) $(USER_OBJS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: GCC C++ Linker'
-	g++ -fopenmp -o "SequencingProject2" $(OBJS) $(USER_OBJS) $(LIBS)
+	g++ -fopenmp -o "HiBAM" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) $(CC_DEPS)$(C++_DEPS)$(EXECUTABLES)$(C_UPPER_DEPS)$(CXX_DEPS)$(OBJS)$(CPP_DEPS)$(C_DEPS) SequencingProject2
+	-$(RM) $(CC_DEPS)$(C++_DEPS)$(EXECUTABLES)$(C_UPPER_DEPS)$(CXX_DEPS)$(OBJS)$(CPP_DEPS)$(C_DEPS) HiBAM
 	-@echo ' '
 
 .PHONY: all clean dependents
